solve .xml file